--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,13 +3,13 @@ LocalMap=/Game/Example_Map
 GameName=platform_test
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+EditorStartupMap=/Game/Maps/Map1.Map1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
-GlobalDefaultGameMode=/Game/SideScrollerBP/Blueprints/SideScrollerGameMode.SideScrollerGameMode_C
+GameDefaultMap=/Game/Maps/Map1.Map1
+GlobalDefaultGameMode=/Game/Character/Blueprints/SideScrollerGameMode.SideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
